--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,8 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": " -v -g -c",
-            "console": "integratedTerminal",
-            "justMyCode": False
+            "args": "-g -c",
+            "console": "integratedTerminal"
         }
     ]
 }
