--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": " -v -g -c",
+            "args": " -g -c -i -v -a -o 0 0 1.3 -io 0 0 1.57",
             "console": "integratedTerminal",
             "justMyCode": False
         }
