--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": " -g -c -i -v -a -o 0 0 1.3 -io 0 0 1.57",
+            "args": "-g -i -ip 0.2 -0.2 0.8 -io 0 0 1.57 -r nico.urdf -en table_nico.urdf -d 1 --output_file nico_test -v --robot_pos 0.0 0.0 0.73 -c 0.2 0.5 0.1 -0.3 0.3 0.1 0.85 0.85 0.1",
             "console": "integratedTerminal",
             "justMyCode": False
         }
