--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": "-g -i -ip 0.2 -0.2 0.8 -io 0 0 1.57 -r nico.urdf -en table_nico.urdf -d 1 --output_file nico_test -v --robot_pos 0.0 0.0 0.73 -c 0.2 0.5 0.1 -0.3 0.3 0.1 0.85 0.85 0.1",
+            "args": "-g  -i -o 0 0 1.57 -ip -0.3 -0.6 1.3 -io 0 0 1.57 -r tiago_dual_mygym.urdf -d 1 --output_file tiago_test -v -c 0.2 0.8 0.1 -0.7 0.7 0.1 0.75 0.75 0.1 -a -to apple.urdf --grasp",
             "console": "integratedTerminal",
             "justMyCode": False
         }
