--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": "-g  -i -o 0 0 1.57 -ip -0.3 -0.6 1.3 -io 0 0 1.57 -r tiago_dual_mygym.urdf -d 1 --output_file tiago_test -v -c 0.2 0.8 0.1 -0.7 0.7 0.1 0.75 0.75 0.1 -a -to apple.urdf --grasp",
+            "args": "--pos 0.4 -0.2 0.2 --urdf nico_grasper.urdf --real_robot",
             "console": "integratedTerminal",
             "justMyCode": False
         }
